--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,43 +64,43 @@ if(VCPKG_TOOLCHAIN)
 endif()
 
 if(WIN32)
-  # foreach(arg
-  #   CMAKE_C_FLAGS_DEBUG CMAKE_CXX_FLAGS_DEBUG
-  #   CMAKE_C_FLAGS_RELEASE CMAKE_CXX_FLAGS_RELEASE
-  #   CMAKE_C_FLAGS_RELWITHDEBINFO CMAKE_CXX_FLAGS_RELWITHDEBINFO
-  #   CMAKE_C_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_MINSIZEREL
-  # )
-  #   # Embed debug information in the object files
-  #   string(REGEX REPLACE "/Z[iI]" "/Z7" ${arg} "${${arg}}")
-  # endforeach()
+  foreach(arg
+    CMAKE_C_FLAGS_DEBUG CMAKE_CXX_FLAGS_DEBUG
+    CMAKE_C_FLAGS_RELEASE CMAKE_CXX_FLAGS_RELEASE
+    CMAKE_C_FLAGS_RELWITHDEBINFO CMAKE_CXX_FLAGS_RELWITHDEBINFO
+    CMAKE_C_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_MINSIZEREL
+  )
+    # Embed debug information in the object files
+    string(REGEX REPLACE "/Z[iI]" "/Z7" ${arg} "${${arg}}")
+  endforeach()
 
-  # add_compile_options(
-  #   # Exception handling model
-  #   /EHsc
+  add_compile_options(
+    # Exception handling model
+    /EHsc
 
-  #   # Enhance optimized debugging
-  #   $<$<NOT:$<CONFIG:Debug>>:/Zo>
+    # Enhance optimized debugging
+    $<$<NOT:$<CONFIG:Debug>>:/Zo>
 
-  #   # Eliminate duplicate strings
-  #   $<$<NOT:$<CONFIG:Debug>>:/GF>
+    # Eliminate duplicate strings
+    $<$<NOT:$<CONFIG:Debug>>:/GF>
 
-  #   # Enable function-level linking
-  #   $<$<NOT:$<CONFIG:Debug>>:/Gy>
+    # Enable function-level linking
+    $<$<NOT:$<CONFIG:Debug>>:/Gy>
 
-  #   # Remove unreferenced COMDAT
-  #   $<$<NOT:$<CONFIG:Debug>>:/Zc:inline>
-  # )
+    # Remove unreferenced COMDAT
+    $<$<NOT:$<CONFIG:Debug>>:/Zc:inline>
+  )
 
-  # add_link_options(
-  #   # Remove unreferenced code
-  #   $<$<NOT:$<CONFIG:Debug>>:/OPT:REF>
+  add_link_options(
+    # Remove unreferenced code
+    $<$<NOT:$<CONFIG:Debug>>:/OPT:REF>
 
-  #   # Remove duplicate sections
-  #   $<$<NOT:$<CONFIG:Debug>>:/OPT:ICF>
+    # Remove duplicate sections
+    $<$<NOT:$<CONFIG:Debug>>:/OPT:ICF>
 
-  #   # Use relative path to the PDB file to avoid exposing the full path
-  #   /PDBALTPATH:%_PDB%
-  # )
+    # Use relative path to the PDB file to avoid exposing the full path
+    /PDBALTPATH:%_PDB%
+  )
 else()
   add_compile_options(
     -fsigned-char -fstack-protector-strong -fdiagnostics-color
