--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ endif()
 
 add_library(common INTERFACE)
 target_include_directories(
-    common SYSTEM INTERFACE
+    common INTERFACE
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/vendor/reaper-sdk/sdk)
 
