--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,8 +117,11 @@ else()
 endif()
 
 add_library(common INTERFACE)
-target_include_directories(common INTERFACE
-  ${CMAKE_SOURCE_DIR}/vendor ${CMAKE_SOURCE_DIR}/vendor/reaper-sdk/sdk)
+target_include_directories(
+  common INTERFACE
+  ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/vendor 
+  ${CMAKE_SOURCE_DIR}/vendor/reaper-sdk/sdk)
 if(WIN32)
   target_compile_options(common INTERFACE
     /W3 /WX /wd4244 /wd4267 /wd4312 /wd4996 /wd5208)
